# appel

./: .gitattributes  appel.cabal
arithfunc/: 1  2  3  4  f_as_v  num_args  unbound  v_as_f
pup/: 1  2
src/: Ch1Exercises.hs  GENlexer.hs  GENparser.hs  Main.hs  StraightLine.hs  arithfunc.x  arithfunc.y  lex.x  pup.x  pup.y
src/ArithFunc/: Lexer.hs  Parser.hs  Typecheck.hs
src/Pup/: Lexer.hs  Parser.hs
