cabal-version: 2.4
name:          appel
version:       0.1.0.0
maintainer:    michaellan202@gmail.com
author:        Michael Lan

executable appel
  main-is:          Main.hs
  hs-source-dirs:   src

  -- cabal-fmt: expand src -Main
  other-modules:
    Ch1Exercises
    StraightLine

  default-language: Haskell2010
  build-depends:
    , base   ^>=4.16.3.0
    , extra  ^>=1.7.12
