cabal-version: 2.4
name:          appel
version:       0.1.0.0
maintainer:    michaellan202@gmail.com
author:        Michael Lan

executable appel
  main-is:          Main.hs
  hs-source-dirs:   src

  -- cabal-fmt: expand src -Main
  other-modules:
    Ch1Exercises
    Pup.Lexer
    Pup.Parser
    StraightLine

  default-language: Haskell2010
  build-depends:
    , array  ^>=0.5.4
    , base   ^>=4.16.3.0
    , extra  ^>=1.7.12
